@@ -1578,6 +1578,16 @@ ATTR_CMD_ACCESS
 
   Related Topics: access, PERMISSION.
 
+& ATTR_NAME_CHARSET
+ATTR_NAME_CHARSET
+
+  CONFIG PARAMETER: attr_name_charset [!]<charset> [[!]<charset>]...
+
+    ascii - Restrict attribute names to use ASCII.
+
+  Related Topics: exit_name_charset, player_name_charset, room_name_charset,
+                  thing_name_charset.
+
 & AUTOZONE
 AUTOZONE
 
@@ -1840,9 +1850,9 @@ CONFIG PARAMETERS
   particular parameter.
 
   access  alias  allow_guest_from_registered_site  article_rule  attr_access
-  attr_alias  attr_cmd_access  autozone  bad_name  badsite_file  cache_names
-  cache_pages  cache_tick_period  check_interval  check_offset
-  clone_copies_cost  command_quota_increment  command_quota_max
+  attr_alias  attr_cmd_access  attr_name_charset  autozone  bad_name
+  badsite_file  cache_names  cache_pages  cache_tick_period  check_interval
+  check_offset  clone_copies_cost  command_quota_increment  command_quota_max
   compress_program  compression  comsys_database  config_access  conn_timeout
   connect_file  connect_reg_file  crash_database  crash_message  create_max_cost
   create_min_cost  dark_sleepers  def_exit_rx  def_exit_tx  def_player_rx
@@ -1850,52 +1860,53 @@ CONFIG PARAMETERS
   default_home  destroy_going_now  dig_cost  down_file  down_motd_message
   dump_interval  dump_message  dump_offset  earn_limit  eval_comtitle
   events_daily_hour  examine_flags  examine_public_attrs  exit_flags
-  exit_parent  exit_quota  fascist_teleport  find_money_chance
-  fixed_home_message  fixed_tel_message  flag_access  flag_alias  flag_name
-  float_precision forbid_site  fork_dump  full_file  full_motd_message
-  function_access  function_alias  function_name  function_invocation_limit
-  function_recursion_limit  game_dir_file  game_pag_file  global_error_obj
+  exit_name_charset  exit_parent  exit_quota  fascist_teleport
+  find_money_chance  fixed_home_message  fixed_tel_message  flag_access
+  flag_alias  flag_name  float_precision forbid_site  fork_dump  full_file
+  full_motd_message  function_access  function_alias  function_name
+  function_invocation_limit  function_recursion_limit  game_dir_file
 
 { 'wizhelp config parameters2' for more }
 
 & CONFIG PARAMETERS2
 CONFIG PARAMETERS (continued)
 
-  good_name  guest_char_num  guest_file  guest_nuker  guest_prefix  guest_site
-  guests_channel guests_channel_alias  have_comsys  have_mailer  have_zones
-  help_executor  helpfile  hook_cmd  hook_obj  hostnames  idle_interval
-  idle_timeout  idle_wiz_dark  immobile_message  include  indent_desc
-  initial_size  input_database  kill_guarantee_cost  kill_max_cost
-  kill_min_cost  lag_limit  lag_maximum  lbuf_size  link_cost  list_access
-  lock_recursion_limit  log  log_options  logout_cmd_access  logout_cmd_alias
-  look_obey_terse  machine_command_cost  mail_database  mail_ehlo
-  mail_expiration  mail_per_hour  mail_sendaddr  mail_sendname  mail_server
-  mail_subject  master_room  match_own_commands  max_cache_size  max_players
-  min_guests  module  money_name_plural  money_name_singular  motd_file
-  motd_message  mud_name  newuser_file  nositemon_site  notify_recursion_limit
-  number_guests  open_cost  output_database  output_limit  page_cost
-  paranoid_allocate  parent_recursion_limit  paycheck  pcreate_per_hour
-  pemit_any_object  pemit_far_players  permit_site  player_flags
-  player_parent  player_listen  player_match_own_commands  player_name_spaces
+  game_pag_file  global_error_obj  good_name  guest_char_num  guest_file
+  guest_nuker  guest_prefix  guest_site  guests_channel guests_channel_alias
+  have_comsys  have_mailer  have_zones  help_executor  helpfile  hook_cmd
+  hook_obj  hostnames  idle_interval  idle_timeout  idle_wiz_dark
+  immobile_message  include  indent_desc  initial_size  input_database
+  kill_guarantee_cost  kill_max_cost  kill_min_cost  lag_limit  lag_maximum
+  lbuf_size  link_cost  list_access  lock_recursion_limit  log  log_options
+  logout_cmd_access  logout_cmd_alias  look_obey_terse  machine_command_cost
+  mail_database  mail_ehlo  mail_expiration  mail_per_hour  mail_sendaddr
+  mail_sendname  mail_server  mail_subject  master_room  match_own_commands
+  max_cache_size  max_players  min_guests  module  money_name_plural
+  money_name_singular  motd_file  motd_message  mud_name  newuser_file
+  nositemon_site  notify_recursion_limit  number_guests  open_cost
+  output_database  output_limit  page_cost  paranoid_allocate
+  parent_recursion_limit  paycheck  pcreate_per_hour  pemit_any_object
+  pemit_far_players  permit_site  player_flags  player_parent  player_listen
+  player_match_own_commands  player_name_charset  player_name_spaces
   player_queue_limit  player_quota  player_starting_home  player_starting_room
   port  postdump_message  power_alias  public_channel  public_channel_alias
   public_flags  pueblo_message  queue_active_chunk  queue_idle_chunk
-  quiet_look  quiet_whisper  quit_file  quotas  raw_helpfile  read_remote_desc
 
 { 'wizhelp config parameters3' for more }
 
 & CONFIG PARAMETERS3
 CONFIG PARAMETERS (continued)
 
+  quiet_look  quiet_whisper  quit_file  quotas  raw_helpfile  read_remote_desc
   read_remote_name  reality_level  register_create_file  register_site
   reset_players  restrict_home  retry_limit  robot_cost  robot_flags
-  robot_speech  room_flags  room_parent  room_quota  run_startup
+  robot_speech  room_flags  room_name_charset  room_parent  room_quota  run_startup
   sacrifice_adjust  sacrifice_factor  safe_wipe  safer_passwords  search_cost
   see_owned_dark  signal_action  site_chars  space_compress  sql_database
   sql_password  sql_server  sql_user  stack_limit  starting_money
   starting_quota  status_file  stripped_flags  suspect_site  sweep_dark
   switch_default_all  terse_shows_contents  terse_shows_exits
-  terse_shows_move_messages  thing_flags  thing_parent  thing_quota  timeslice
+  terse_shows_move_messages  thing_flags  thing_name_charset  thing_parent  thing_quota  timeslice
   toad_recipient  trace_output_limit  trace_topdown  trust_site
   uncompress_program  unowned_safe  use_http  user_attr_access
   user_attr_per_hour  wait_cost  wizard_motd_file
@@ -2311,6 +2322,16 @@ EXIT_FLAGS
   set.
 
   Related Topics: @list, player_flags, robot_flags, room_flags, thing_flags.
+
+& EXIT_NAME_CHARSET
+EXIT_NAME_CHARSET
+
+  CONFIG PARAMETER: exit_name_charset [!]<charset> [[!]<charset>]...
+
+    ascii - Restrict exit names to use ASCII.
+
+  Related Topics: attr_name_charset, player_name_charset, room_name_charset,
+                  thing_name_charset.
 
 & EXIT_PARENT
 EXIT_PARENT
@@ -3939,6 +3960,16 @@ PLAYER_MATCH_OWN_COMMANDS
 
   Related Topics: match_own_commands.
 
+& PLAYER_NAME_CHARSET
+PLAYER_NAME_CHARSET
+
+  CONFIG PARAMETER: player_name_charset [!]<charset> [[!]<charset>]...
+
+    ascii - Restrict player names to use ASCII.
+
+  Related Topics: attr_name_charset, exit_name_charset, room_name_charset,
+                  thing_name_charset.
+
 & PLAYER_NAME_SPACES
 PLAYER_NAME_SPACES
 
@@ -4339,6 +4370,16 @@ ROOM_FLAGS
   Flags prefixed by a ! remove the indicated flag from the set.
 
   Related Topics: @list, exit_flags, player_flags, robot_flags, thing_flags.
+
+& ROOM_NAME_CHARSET
+ROOM_NAME_CHARSET
+
+  CONFIG PARAMETER: room_name_charset [!]<charset> [[!]<charset>]...
+
+    ascii - Restrict room names to use ASCII.
+
+  Related Topics: attr_name_charset, exit_name_charset, player_name_charset,
+                  room_name_charset, thing_name_charset.
 
 & ROOM_PARENT
 ROOM_PARENT
@@ -4876,6 +4917,16 @@ THING_FLAGS
   Flags prefixed by a ! remove the indicated flag from the set.
 
   Related Topics: @list, exit_flags, player_flags, robot_flags, room_flags.
+
+& THING_NAME_CHARSET
+THING_NAME_CHARSET
+
+  CONFIG PARAMETER: thing_name_charset [!]<charset> [[!]<charset>]...
+
+    ascii - Restrict thing names to use ASCII.
+
+  Related Topics: attr_name_charset, exit_name_charset, player_name_charset,
+                  room_name_charset.
 
 & THING_PARENT
 THING_PARENT
