@@ -85,7 +85,10 @@ AC_SUBST(SQL_LIBS)
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_TIME
-AC_CHECK_HEADERS(mysql.h)
+save_CPPFLAGS="$CPPFLAGS"
+CPPFLAGS="$save_CPPFLAGS $SQL_INCLUDE"
+AC_TRY_COMPILE([#include <mysql.h>], [int x = 1;], AC_DEFINE([HAVE_MYSQL_H], [], [Define if mysql.h exists.]))
+CPPFLAGS="$save_CPPFLAGS"
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
